--- a/public/css/app.css
+++ b/public/css/app.css
@@ -919,6 +919,10 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(254 240 138 / var(--tw-bg-opacity));
 }
+.bg-lime-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(101 163 13 / var(--tw-bg-opacity));
+}
 .fill-current {
   fill: currentColor;
 }
