--- a/public/css/app.css
+++ b/public/css/app.css
@@ -625,6 +625,9 @@ select {
 .col-span-2 {
   grid-column: span 2 / span 2;
 }
+.m-2 {
+  margin: 0.5rem;
+}
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
